flux/apps/forgejo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forgejo
  namespace: default
spec:
  selector:
    matchLabels:
      app: forgejo
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: forgejo
    spec:
      containers:
        - name: forgejo
          image: codeberg.org/forgejo/forgejo:16.0.5
          resources:
            requests:
              cpu: 10m
              memory: 100Mi
            limits:
              # memory: 100Mi
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: forgejo-data
              mountPath: /data
            - name: forgejo-repos
              mountPath: /repos
            - name: forgejo-lfs
              mountPath: /lfs
      volumes:
        - name: forgejo-data
          nfs:
            server: datasphere
            path: /Root/Volumes/forgejo/data
        - name: forgejo-repos
          nfs:
            server: datasphere
            path: /Root/Volumes/forgejo/repos
        - name: forgejo-lfs
          nfs:
            server: datasphere
            path: /Root/Volumes/forgejo/lfs
