flux/apps/forgejo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: forgejo
  namespace: default
spec:
  selector:
    app: forgejo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
